add date picker to view past expenses

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,13 @@
+/*
 html {
   background-color: #E4E9FD;
   background-image: -webkit-linear-gradient(65deg, #00CC7A 50%, #E4E9FD 50%);
   min-height: 1000px;
   font-family: 'helvetica neue';
+}
+*/
+body {
+  padding-top: 3rem;
 }
 
 h1 {
@@ -43,6 +48,14 @@ h3 {
   border-bottom: 0;
 }
 
+.item-header {
+  margin-left: 3.3rem;
+}
+
+.item-col-header {
+  font-weight: bold;
+}
+
 input:checked+p {
   text-decoration: line-through;
   text-decoration-color: #00CC7A;
@@ -78,6 +91,19 @@ button.budget-summary {
   padding-bottom: 6px;
   border-width: 0;
   margin-left: 25px;
+}
+
+button.budget-date-picker {
+  min-height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: #fff;
+  color: #000;
+  font-size: 1rem;
+  padding-bottom: 0.25rem;
+  border-width: 0;
+  margin-left: 0.5rem;
 }
 
 input.listItem[type="text"] {
@@ -130,4 +156,16 @@ footer {
 
 .home-container {
   text-align: center;
+}
+
+.login-card {
+  margin: auto;
+}
+
+.navbar-date {
+  margin-left: 8rem;
+}
+
+.navbar-date-picker {
+  margin-left: 3rem;
 }
