--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,10 +28,9 @@
 <body>
 
 <div class="container mt-5">
-  <h1>Login</h1>
 
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 login-card">
       <div class="card">
         <div class="card-body">
 
