--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,7 @@
-/*
-html {
-  background-color: #E4E9FD;
-  background-image: -webkit-linear-gradient(65deg, #00CC7A 50%, #E4E9FD 50%);
-  min-height: 1000px;
-  font-family: 'helvetica neue';
+.html-home {
+  background-color: #343A40;
 }
-*/
+
 body {
   padding-top: 3rem;
 }
@@ -18,6 +14,14 @@ h1 {
 h3 {
   color: #fff;
   padding: 10px;
+}
+
+.fa-money-bill-wave {
+  color: #228B22;
+}
+
+.home-btn {
+  margin: 0 0.25rem;
 }
 
 .dropdown {
@@ -33,7 +37,7 @@ h3 {
 }
 
 #heading {
-  background-color: #00CC7A;
+  background-color: #5F9EA0;
   text-align: center;
 }
 
@@ -98,8 +102,8 @@ button.budget-date-picker {
   width: 2rem;
   border-radius: 50%;
   border-color: transparent;
-  background-color: #fff;
-  color: #000;
+  background-color: #00CC7A;
+  color: #fff;
   font-size: 1rem;
   padding-bottom: 0.25rem;
   border-width: 0;
