--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html class="html-home" lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>Secrets</title>
+  <title>Budget Tracker</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
+
+  <div class="fixed-top">
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="navbar-brand">
+        <a>Home Page</a>
+      </div>
+    </nav>
+  </div>
 </head>
 
 <body>
@@ -16,8 +25,8 @@
     <i class="fas fa-money-bill-wave fa-8x"></i>
     <h1 class="home-title">Budget Tracker</h1>
     <hr>
-    <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
-    <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
+    <a class="btn btn-dark btn-lg home-btn" href="/login" role="button">Login</a>
+    <a class="btn btn-light btn-lg home-btn" href="/register" role="button">Register</a>
 
   </div>
 </div>
