--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,11 +1,16 @@
 <%- include("header") -%>
 
   <div class="box" id="heading">
-    <h1>Budget Summary</h1>
-    <h3> <%= listTitle %> </h3>
+    <h1><%= monthlyTotalsTitle %> Expenses</h1>
   </div>
 
   <div class="box">
+    <div class="item item-header">
+      <p class="item item-col-header">Item</p>
+      <p class="item item-col-header">Category</p>
+      <p class="item item-col-header">Cost</p>
+      <p class="item item-col-header">Purchase Date</p>
+    </div>
     <% newListItems.forEach(function(item) { %>
       <form class="" action="/delete" method="post">
         <div class="item">
@@ -21,7 +26,16 @@
 
       <form class="item" action="/" method="post">
         <input class="listItem" type="text" name="newItem" placeholder="New Item" autocomplete="off">
-        <input class="listItem" type="text" name="itemType" placeholder="Category" autocomplete="off">
+        <input class="listItem" type="text" name="itemType" placeholder="Category" list="Category" autocomplete="off">
+        <datalist id="Category">
+          <option>Bill</option>
+          <option>Clothes</option>
+          <option>Food</option>
+          <option>Gas</option>
+          <option>Gift</option>
+          <option>Home</option>
+          <option>Non-Essential</option>
+        </datalist>
         <input type="number" name="itemCost" placeholder="Cost" autocomplete="off" min="0.01" step="0.01">
         <div class="dates">
           <div class="input-group mb-4">
@@ -36,24 +50,31 @@
   </div>
 
   <div class="box" id="heading">
-    <h1> <%= monthlyTotalsTitle %> Totals </h1>
+    <h1> <%= monthlyTotalsTitle %> Breakdown </h1>
   </div>
 
   <div class="box">
+    <div class="item item-header">
+      <p class="item item-col-header">Category</p>
+      <p class="item item-col-header">Cost</p>
+      <p class="item item-col-header">Items</p>
+    </div>
     <% groupedTotals.forEach(function(item) { %>
       <form class="" action="/delete" method="post">
-        <div class="item">
+        <div class="item item-header">
           <p class="item"><%=  item._id.type  %></p>
           <p class="item"><%=  "$" + item.cost  %></p>
+          <p class="item"><%=  item.count  %></p>
         </div>
         <input type="hidden" name="listName" value="<%= listTitle %>">
       </form>
       <% }) %>
     <% monthlyTotals.forEach(function(item) { %>
       <form class="" action="/delete" method="post">
-        <div class="item">
-          <p class="item">TOTAL</p>
+        <div class="item item-header">
+          <p class="item item-col-header">TOTAL</p>
           <p class="item"><%=  "$" + item.cost  %></p>
+          <p class="item"><%=  item.count  %></p>
         </div>
         <input type="hidden" name="listName" value="<%= listTitle %>">
       </form>
