--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,6 +60,10 @@ h3 {
   font-weight: bold;
 }
 
+.new-item {
+  border-bottom: 1px solid #000;
+}
+
 input:checked+p {
   text-decoration: line-through;
   text-decoration-color: #00CC7A;
